[gd_scene load_steps=2 format=3 uid="uid://c5y8nax3n1p4q"]

[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="1_game_over"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_game_over")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SurvivalTimeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Survived: 0:00"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Score: 0"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Accuracy: 0.0%"
horizontal_alignment = 1

[node name="AsteroidsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Asteroids Destroyed: 0"
horizontal_alignment = 1

[node name="CrystalsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Crystals Collected: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreditsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreditsBreakdownLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CREDITS EARNED"
horizontal_alignment = 1

[node name="BaseCreditsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+ 0 (Crystals)"
horizontal_alignment = 1

[node name="TimeBonusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+ 0 (Survival Bonus)"
horizontal_alignment = 1

[node name="DestructionBonusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+ 0 (Combat Bonus)"
horizontal_alignment = 1

[node name="AccuracyBonusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+ 0 (Accuracy Bonus)"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
layout_mode = 2

[node name="TotalCreditsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "TOTAL: 0 Credits"
horizontal_alignment = 1

[node name="TotalCreditsAvailableLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Total Credits Available: 0"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "RETRY (R)"

[node name="UpgradesButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "UPGRADES (U)"

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "MAIN MENU (ESC)"
